[package]
name = "lit_derive"
version = "0.0.0"
authors = ["Mitchell van der Hoeff <8631205+mitchelljustin@users.noreply.github.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.55"
proc-macro-error = "1.0.4"

[dependencies.lit]
path = "../lit"
